<resources>
    <string name="app_name">Teach English</string>
    <string name="content_description">10</string>
    <string name="network_error">network_error</string>
    <string name="can_not_connect_to_server">can_not_connect_to_server</string>
    <string name="message_error">can_not_connect_to_server</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="let_learn_ielts">Let\'s learn IELTS</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="or">Or</string>
    <string name="new_user_let_sign_up">New user, Let’s sign up</string>
    <string name="login_">Login!</string>
    <string name="hello">HELLO</string>
    <string name="sign_up">SIGN UP</string>
    <string name="let_create_an_account_to_learn_ielts">Let Create An Account To Learn IELTS</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_">Sign Up!</string>
    <string name="hello_">Hello</string>
    <string name="viet_toan">Viet Toan</string>
    <string name="comma">,</string>
    <string name="start_learning_now">Start learning now!</string>
    <string name="category_1">CATEGORY 1</string>
    <string name="find_this_useful">FIND THIS USEFUL</string>
    <string name="invite_your_friend_to_study_together">invite your friend to study together!</string>
    <string name="invite_now">INVITE NOW</string>
    <string name="search_your_document">Search your document</string>
    <string name="next">Next</string>
    <string name="new_user_let">New user, Let’s</string>
    <string name="sign_up_lower_case">sign up</string>
    <string name="check_now">CHECK NOW</string>
    <string name="check_your_answer">CHECK YOUR ANSWER</string>
    <string name="view_keys_explanation"><![CDATA[VIEW KEYS & EXPLANATION]]></string>
    <string name="view_now">VIEW NOW!</string>
    <string name="reading">Reading</string>
    <string name="listening">Listening</string>
    <string name="writing">Writing</string>
    <string name="speaking">Speaking</string>
    <string name="view_solution_and_explanation">View solution and explanation</string>
    <string name="detail_explanation">Detail explanation</string>
    <string name="detailed_explanation">Detailed Explanation</string>
    <string name="your_comment">Your comment...</string>
    <string name="submit">SUBMIT</string>
    <string name="how_to_use_this_function">HOW TO USE THIS FUNCTION</string>
    <string name="type">Type:</string>
    <string name="page">Page:</string>
    <string name="sample_answers">Sample answers</string>
    <string name="this_function_help_you">This function help you view all answers and detailed explanation of the test.</string>
    <string name="before_viewing_keys">Before viewing keys, this function will help you check how many score did you get, which answers are wrong/right. So you can spending time revise your answer again.</string>
</resources>