<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.teachenglish.techenglish.view.GEToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:title="Document 1 - Test 1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ctlHeader"
            android:background="@drawable/shape_background_white_border_blue"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp">
            <View
                android:background="@color/colorAccent"
                android:layout_width="4dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_function_help_you"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvReading"
            style="@style/BaseButton.ButtonWrap.BlueRadius5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:drawablePadding="20dp"
            android:gravity="start|center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/reading"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_reading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ctlHeader"
            app:layout_constraintWidth_percent="0.6" />
        <TextView
            android:id="@+id/tvListening"
            style="@style/BaseButton.ButtonWrap.BlueRadius5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            android:gravity="start|center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/listening"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_listening"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvReading"
            app:layout_constraintWidth_percent="0.6" />
        <TextView
            android:id="@+id/tvWriting"
            style="@style/BaseButton.ButtonWrap.BlueRadius5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            android:gravity="start|center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/writing"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_writing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvListening"
            app:layout_constraintWidth_percent="0.6" />
        <TextView
            android:id="@+id/tvSpeaking"
            style="@style/BaseButton.ButtonWrap.BlueRadius5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            android:gravity="start|center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/speaking"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_speaking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWriting"
            app:layout_constraintWidth_percent="0.6" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
