<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_rectangle_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_rectangle_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viet_toan"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/tvStartLearn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start_learning_now"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUserName" />

        <TextView
            android:id="@+id/tvCategory1"
            style="@style/BaseButton.ButtonWrap.BlueRadius5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:text="@string/category_1"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tvCategory2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tvCategory2"
            style="@style/BaseButton.ButtonWrap.BlueRadius5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:text="@string/category_1"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/tvCategory3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory1" />


        <TextView
            android:id="@+id/tvCategory3"
            style="@style/BaseButton.ButtonWrap.BlueDarkRadius5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:text="@string/category_1"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory2" />


        <ImageView
            android:id="@+id/imgLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/ic_like"
            app:layout_constraintEnd_toStartOf="@+id/tvFind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory3" />

        <TextView
            android:id="@+id/tvFind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:text="@string/find_this_useful"
            android:textColor="#427ECE"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tvInvite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgLike"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory3" />

        <TextView
            android:id="@+id/tvInvite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/invite_your_friend_to_study_together"
            android:textColor="#000000"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tvInviteNow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgLike"
            app:layout_constraintTop_toBottomOf="@+id/tvFind" />

        <TextView
            android:id="@+id/tvInviteNow"
            style="@style/BaseButton.ButtonWrap.RedRadius10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/invite_now"
            app:layout_constraintStart_toEndOf="@+id/imgLike"
            app:layout_constraintTop_toBottomOf="@+id/tvInvite" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_user" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TEACH ENG"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Pro User"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/frmContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:translationZ="10dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>